# cypressbit-transport-io-lab

./: .env.example  .gitignore  CLAUDE_NOTES.md  LICENSE  README.md  pyproject.toml
dashboard/: app.py
dashboard/assets/: accessibility.css
data/: README.md
data/sample/: consumer_spending_vector.csv  inflation_index.csv  project_cost_mix.csv  sectors.csv  transactions.csv
docs/: README.md
src/cb_transport_io_lab/: __init__.py  cli.py  coefficients.py  config.py  data_adapters.py  employment.py  leontief.py  reporting.py  scenarios.py  schemas.py  validation.py
